Finished movement on adventurers, including end of actions, mountains and populated frames.